Seperate slide in animation in another class in game heading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="top-menu">
-            <h1 class="game-heading">Tic Tac Toe</h1>
+            <h1 class="game-heading game-heading-slide-in">Tic Tac Toe</h1>
             <div class="new-game-buttons">
                 <button class="new-game-button" id="new-game-bot">New Game (Bot)</button>
                 <button class="new-game-button" id="new-game-friend">New Game (Friend)</button>
