--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 
 <body>
     <div class="container">
-        <div class="top-menu">
+        <header>
             <h1 class="game-heading game-heading-slide-in">Tic Tac Toe</h1>
             <div class="new-game-buttons">
                 <button class="new-game-button" id="new-game-bot">New Game (Bot)</button>
                 <button class="new-game-button" id="new-game-friend">New Game (Friend)</button>
             </div>
-        </div>
-        <div class="game">
+        </header>
+        <main>
             <div id="playerX-container" class="player-container">
                 <div class="player-name">Player X</div>
                 <div>Points: <span id="playerX-points">0</span></div>
+            </div>
+            <div id="playerO-container" class="player-container">
+                <div class="player-name">Player O</div>
+                <div>Points: <span id="playerO-points">0</span></div>
             </div>
             <div class="game-board">
                 <div class="square" data-row="0" data-column="0"></div>
@@ -34,11 +38,7 @@
                 <div class="square" data-row="2" data-column="1"></div>
                 <div class="square" data-row="2" data-column="2"></div>
             </div>
-            <div id="playerO-container" class="player-container">
-                <div class="player-name">Player O</div>
-                <div>Points: <span id="playerO-points">0</span></div>
-            </div>
-        </div>
+        </main>
     </div>
     <script src="script.js"></script>
 </body>
